# IB_report_formatter

./: .gitignore  AGENTS.md  CHANGELOG.md  README.ko.md  README.md  cli_utils.py  converters.py  deep_md_cleaner.py  diagram_renderer.py  git_checklist.md  ib_renderer.py  md_formatter.py  md_parser.py  md_renderer.py  md_to_word.py  next_step.md  omml_latex.py  plan.md  plan_upgrade.md  pyproject.toml  roadmap.md  roundtrip_audit.py  stream_utils.py  word_parser.py  word_to_md.py  word_to_md_plan.md
docs/: format-preprocessing-guide.md
tests/: test_cli_batch.py  test_cli_utils.py  test_converters.py  test_deep_md_cleaner.py  test_ib_renderer.py  test_md_formatter.py  test_md_parser.py  test_md_renderer.py  test_omml_latex.py  test_roundtrip_audit.py  test_stream.py  test_word_parser.py  test_word_to_md_cli.py  웅진_계열사.md  일동제약_수익성분석.md
tests/prototypes/: render_woongjin_diagram_prototype.py
